resize the columns